--- a/index.html
+++ b/index.html
@@ -957,6 +957,9 @@
 <script src="js/jquery.js"></script> 
 <script src="js/bootstrap.min.js"></script>
 <script src="js/revolution.min.js"></script>
+<!-- ManyChat -->
+<script src="//widget.manychat.com/109208677612435.js" async="async"></script>
+
 <script src="js/jquery.fancybox.pack.js"></script>
 <script src="js/jquery.fancybox-media.js"></script>
 <script src="js/owl.js"></script>
