--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <li data-transition="fade" data-slotamount="2" data-masterspeed="5000" data-thumb="images/junk/1.jpg"  data-saveperformance="off"  data-title="Contract Us">
                     <div class="videoWrapper">
     <!-- Copy & Pasted from YouTube -->
-						<video autoplay src="images/fotos/logo Junk pagina.mp4" controls ></video>
+						<video autoplay loop  src="images/fotos/logo Junk pagina.mp4"></video>
        </div>
                  
                     </li>
