--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <div class="content-box pull-right">
                    	<div class="wow fadeInDown">
                     <div class="quote-icon"><span class="fa fa-quote-left"></span></div>
-                    <h2>our <span class="normal-font theme_color">Misión</span></h2>
+                    <h2>our <span class="normal-font theme_color">Mision</span></h2>
                     <div class="title-text">
                         </div>
                     <div class="text">Our mission is focused on collecting, destroying and recycling your products in a safe, fast and reliable way, offering our customers affordable costs, always seeking to provide the highest quality, attention and the best service. 
