--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                  <div class="info-outer">
                  	<!--Info Box-->
                     <ul class="info-box clearfix">
-						 <h3 align="center" style="color: #FFCF00"><b>WE POINT, WE YOU REMOVE!</b></h3>
+						 <h3 align="center" style="color: #FFCF00"><b>YOU POINT, WE REMOVE!</b></h3>
                     	
                         
                     </ul>
