--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                  <article class="slide-item">
                 	
                     <div class="info-box">
-                    	<figure class="image-box"><a href="mailto:correojmp@gmail.com?Subject=Quiero%20hacer%20una%20cotización%20"  target="_blank"><img src="images/fotos/c.png" alt=""></a></figure>
+                    	<figure class="image-box"><a href="mailto:jmp.removal@gmail.com?Subject=I%20need%20a%20quote%20"  target="_blank"><img src="images/fotos/c.png" alt=""></a></figure>
                     	<h3>Send Us a:</h3>
                         <p class="designation">Email address</p>
                     </div>
@@ -768,7 +768,7 @@
     	<div class="footer-bottom">
             <div class="auto-container clearfix">
                 <!--Copyright-->
-                <div class="copyright text-center">Copyright 2020 &copy; by <a href="#">Fullstack Marketing</a></div>
+                <div class="copyright text-center">Copyright 2020 &copy; by <a href="https://www.facebook.com/fullstackmkt/">Fullstack Marketing</a></div>
             </div>
            
         </div>
